<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_padding"
        android:layout_marginTop="@dimen/common_padding"
        android:text="@string/login_01"
        android:textColor="@color/black"
        android:textSize="@dimen/header_size"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_padding"
        android:layout_marginTop="40dp"
        android:text="@string/login_02"
        android:textColor="@color/gray_600"
        android:textSize="@dimen/text_size_14dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="@dimen/common_padding"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="@dimen/common_padding"
        android:background="@drawable/selector_input_box"
        android:gravity="center_vertical|start"
        android:inputType="textEmailAddress"
        android:lines="1"
        android:maxLength="40"
        android:paddingStart="15dp"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEmail" />

    <TextView
        android:id="@+id/tvPwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_padding"
        android:layout_marginTop="25dp"
        android:text="@string/login_03"
        android:textColor="@color/gray_600"
        android:textSize="@dimen/text_size_14dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmail" />

    <EditText
        android:id="@+id/etPwd"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="@dimen/common_padding"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="@dimen/common_padding"
        android:background="@drawable/selector_input_box"
        android:inputType="textPassword"
        android:lines="1"
        android:maxLength="20"
        android:paddingStart="15dp"
        android:singleLine="true"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPwd" />

    <TextView
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="@dimen/common_padding"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="@dimen/common_padding"
        android:background="@drawable/selector_next_button"
        android:gravity="center"
        android:text="@string/login_07"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_16dp"
        app:layout_constraintTop_toBottomOf="@+id/etPwd" />

    <TextView
        android:id="@+id/tvSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:paddingStart="15dp"
        android:paddingTop="30dp"
        android:paddingEnd="15dp"
        android:paddingBottom="30dp"
        android:text="@string/login_04"
        android:textColor="@color/gray_600"
        app:layout_constraintEnd_toStartOf="@+id/tvFindId"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

    <TextView
        android:id="@+id/tvFindId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:paddingStart="15dp"
        android:paddingTop="30dp"
        android:paddingEnd="15dp"
        android:paddingBottom="30dp"
        android:text="@string/login_05"
        android:textColor="@color/gray_600"
        app:layout_constraintEnd_toStartOf="@+id/tvFindPwd"
        app:layout_constraintStart_toEndOf="@+id/tvSignUp"
        app:layout_constraintTop_toTopOf="@+id/tvSignUp" />

    <TextView
        android:id="@+id/tvFindPwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="15dp"
        android:paddingTop="30dp"
        android:paddingEnd="15dp"
        android:paddingBottom="30dp"
        android:text="@string/login_06"
        android:textColor="@color/gray_600"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvFindId"
        app:layout_constraintTop_toTopOf="@+id/tvSignUp" />

    <TextView
        android:id="@+id/btnTestData"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="@dimen/common_padding"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="@dimen/common_padding"
        android:background="@drawable/selector_next_button"
        android:gravity="center"
        android:paddingStart="@dimen/common_padding"
        android:paddingEnd="@dimen/common_padding"
        android:text="테스트데이터 추가"
        android:textColor="@color/gray_200"
        android:textSize="@dimen/text_size_16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>