<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <!--헤더-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/headerLayer"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:id="@+id/rlBack"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_centerInParent="true"
                android:layout_marginStart="@dimen/common_padding"
                android:src="@drawable/ic_arrow_black" />

        </RelativeLayout>

        <TextView
            android:id="@+id/tvSetting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/group_05"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_16dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray_200"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <TextView
        android:id="@+id/tvGroupName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_padding"
        android:layout_marginTop="40dp"
        android:text="@string/group_04"
        android:textColor="@color/gray_600"
        android:textSize="@dimen/text_size_14dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerLayer"/>

    <EditText
        android:id="@+id/etGroupName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="@dimen/common_padding"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="@dimen/common_padding"
        android:background="@drawable/selector_input_box"
        android:gravity="center_vertical|start"
        android:inputType="text"
        android:lines="1"
        android:maxLength="40"
        android:paddingStart="15dp"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvGroupName" />


    <TextView
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="@dimen/common_padding"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="@dimen/common_padding"
        android:background="@drawable/selector_next_button"
        android:gravity="center"
        android:text="@string/confirm"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_16dp"
        app:layout_constraintTop_toBottomOf="@+id/etGroupName" />

</androidx.constraintlayout.widget.ConstraintLayout>