<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <!--헤더-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/headerLayer"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:id="@+id/rlBack"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_centerInParent="true"
                android:layout_marginStart="@dimen/common_padding"
                android:src="@drawable/ic_arrow_black" />

        </RelativeLayout>

        <TextView
            android:id="@+id/tvSetting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/alarm_setting_01"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_16dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray_200"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <RelativeLayout
        android:id="@+id/rlReplyAlarm"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/headerLayer">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/common_padding"
            android:text="@string/alarm_setting_02"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_16dp" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/imgReply"
            android:layout_width="55dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/common_padding"
            app:lottie_autoPlay="false"
            app:lottie_loop="false"
            app:lottie_rawRes="@raw/anim_switch" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="@color/gray_200" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlMessageAlarm"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/rlReplyAlarm">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/common_padding"
            android:text="@string/alarm_setting_03"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_16dp" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/imgMessage"
            android:layout_width="55dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/common_padding"
            app:lottie_autoPlay="false"
            app:lottie_loop="false"
            app:lottie_rawRes="@raw/anim_switch" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="@color/gray_200" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlEmergencyAlarm"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/rlMessageAlarm">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/common_padding"
            android:text="@string/alarm_setting_04"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_16dp" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/imgEmergency"
            android:layout_width="55dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/common_padding"
            app:lottie_autoPlay="false"
            app:lottie_loop="false"
            app:lottie_rawRes="@raw/anim_switch" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="@color/gray_200" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>