<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <!--헤더-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/headerLayer"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:id="@+id/rlBack"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_centerInParent="true"
                android:layout_marginStart="@dimen/common_padding"
                android:src="@drawable/ic_arrow_black" />

        </RelativeLayout>

        <TextView
            android:id="@+id/tvSetting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/my_info_modify_01"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_16dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray_200"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/imgProfile"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginTop="@dimen/common_padding"
        android:src="@drawable/ic_no_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerLayer" />

    <androidx.cardview.widget.CardView
        android:id="@+id/infoLayer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_padding"
        android:layout_marginTop="@dimen/common_padding"
        android:layout_marginEnd="@dimen/common_padding"
        app:layout_constraintTop_toBottomOf="@+id/imgProfile">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="10dp">

            <TextView
                android:id="@+id/tvInfoTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_info_modify_01"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/selector_input_box"
                android:maxLength="10"
                android:paddingStart="@dimen/common_padding"
                android:paddingEnd="@dimen/common_padding"
                android:text="@string/my_info_modify_02"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@+id/tvInfoTitle" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/selector_input_box"
                android:maxLength="10"
                android:paddingStart="@dimen/common_padding"
                android:paddingEnd="@dimen/common_padding"
                android:text="@string/my_info_modify_03"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@+id/etName" />

            <EditText
                android:id="@+id/etPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/selector_input_box"
                android:maxLength="10"
                android:paddingStart="@dimen/common_padding"
                android:paddingEnd="@dimen/common_padding"
                android:text="@string/my_info_modify_02"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@+id/etEmail" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/btnModify"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="@dimen/common_padding"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="@dimen/common_padding"
        android:background="@drawable/selector_next_button"
        android:gravity="center"
        android:text="@string/my_info_modify_05"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_16dp"
        app:layout_constraintTop_toBottomOf="@+id/infoLayer"/>

</androidx.constraintlayout.widget.ConstraintLayout>