<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:clipToPadding="false"
    android:paddingTop="10dp"
    android:paddingBottom="5dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_padding"
        android:layout_marginEnd="@dimen/common_padding"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/common_padding"
                android:layout_marginTop="@dimen/common_padding"
                android:layout_marginBottom="@dimen/common_padding"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_18dp"
                app:layout_constraintBottom_toTopOf="@+id/viewDivider"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="그룹 A" />

            <View
                android:id="@+id/viewDivider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="@dimen/common_padding"
                android:layout_marginTop="@dimen/common_padding"
                android:layout_marginEnd="@dimen/common_padding"
                android:background="@color/gray_200"
                app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

            <TextView
                android:id="@+id/tvTodo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/selector_next_button_02"
                android:gravity="center"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:text="@string/group_06"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/tvNotice"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/viewDivider" />

            <TextView
                android:id="@+id/tvNotice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:background="@drawable/selector_next_button_02"
                android:gravity="center"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:text="@string/group_07"
                android:textColor="@color/black"
                app:layout_constraintEnd_toStartOf="@+id/tvInfo"
                app:layout_constraintStart_toEndOf="@+id/tvTodo"
                app:layout_constraintTop_toTopOf="@+id/tvTodo" />

            <TextView
                android:id="@+id/tvInfo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:background="@drawable/selector_next_button_02"
                android:gravity="center"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:text="@string/group_08"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tvNotice"
                app:layout_constraintTop_toTopOf="@+id/tvTodo" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>